--- a/index.html
+++ b/index.html
@@ -4,6 +4,55 @@
     <!-- Meta tags and CSS links -->
     <!-- ... -->
 
+    <!-- Additional CSS for drug search and animations -->
+    <style>
+        .side-services a {
+            font-weight: 100;
+            color: black;
+            font-size: 22px;
+            padding: 10px;
+            text-decoration: underline;
+        }
+
+        /* my ng animate style */
+        .view-animate-container {
+            position: relative;
+            background: white;
+            overflow-x: hidden;
+            height: 1000px;
+            overflow-y: auto;
+        }
+
+        .view-animate {
+            padding: 10px;
+        }
+
+        .view-animate.ng-enter,
+        .view-animate.ng-leave {
+            transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.8s;
+            display: block;
+            width: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            padding: 10px;
+        }
+
+        .view-animate.ng-enter {
+            left: 100%;
+        }
+
+        .view-animate.ng-enter.ng-enter-active {
+            left: 0;
+        }
+
+        .view-animate.ng-leave.ng-leave-active {
+            left: -100%;
+        }
+    </style>
+
     <title>Doctor Dashboard - Remote GDM Monitoring</title>
 </head>
 <body>
