--- a/index.html
+++ b/index.html
@@ -3,7 +3,19 @@
 <head>
     <!-- Meta tags and CSS links -->
     <!-- ... -->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no">
+    <meta name="author" content="Your Name">
+    <title>Doctor Dashboard - Remote GDM Monitoring</title>
 
+    <!-- CSS links -->
+    <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
+    <link rel="icon" type="image/png" href="assets/img/favicon.png">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/css/now-ui-kit.css" rel="stylesheet">
     <!-- Additional CSS for drug search and animations -->
     <style>
         .side-services a {
@@ -109,6 +121,7 @@
 
     <!-- JavaScript and Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="script.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             // Dummy data for OGTT values (replace with actual patient data)
