--- a/index.html
+++ b/index.html
@@ -1,179 +1,120 @@
+<!-- patients.html -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Meta tags and CSS links -->
-    <!-- ... -->
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no">
-    <meta name="author" content="Your Name">
-    <title>Doctor Dashboard - Remote GDM Monitoring</title>
-
-    <!-- CSS links -->
-    <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
-    <link rel="icon" type="image/png" href="assets/img/favicon.png">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/css/now-ui-kit.css" rel="stylesheet">
-    <!-- Additional CSS for drug search and animations -->
-    <style>
-        .side-services a {
-            font-weight: 100;
-            color: black;
-            font-size: 22px;
-            padding: 10px;
-            text-decoration: underline;
-        }
-
-        /* my ng animate style */
-        .view-animate-container {
-            position: relative;
-            background: white;
-            overflow-x: hidden;
-            height: 1000px;
-            overflow-y: auto;
-        }
-
-        .view-animate {
-            padding: 10px;
-        }
-
-        .view-animate.ng-enter,
-        .view-animate.ng-leave {
-            transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.8s;
-            display: block;
-            width: 100%;
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            padding: 10px;
-        }
-
-        .view-animate.ng-enter {
-            left: 100%;
-        }
-
-        .view-animate.ng-enter.ng-enter-active {
-            left: 0;
-        }
-
-        .view-animate.ng-leave.ng-leave-active {
-            left: -100%;
-        }
-    </style>
-
-    <title>Doctor Dashboard - Remote GDM Monitoring</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="style.css">
+    <title>Doctor Dashboard - Patients List</title>
 </head>
 <body>
-    <!-- Navbar -->
-    <!-- ... -->
-
-    <!-- Main content area -->
-    <div class="container">
-        <h1>Welcome, Dr. Jane Doe</h1>
-        <p>You are now viewing the remote GDM monitoring dashboard for your patients.</p>
-
-        <!-- Patient List -->
-        <h2>Patients List</h2>
-        <ul class="patient-list">
-            <li onclick="showPatientDetails(1)">Emily Johnson</li>
-            <li onclick="showPatientDetails(2)">Susan Williams</li>
-            <li onclick="showPatientDetails(3)">Michael Smith</li>
-            <li onclick="showPatientDetails(4)">John Doe</li>
-            <li onclick="showPatientDetails(5)">Jane Smith</li>
+    <section id="sidebar">
+        <a href="#" class="brand"><i class='bx bxs-smile icon'></i> GDM Analyzer</a>
+        <ul class="side-menu">
+            <li><a href="#" class="active"><i class='bx bxs-dashboard icon' ></i> Dashboard</a></li>
+            <li class="divider" data-text="main">Main</li>
+            <li>
+                <a href="#"><i class='bx bxs-inbox icon' ></i> Elements <i class='bx bx-chevron-right icon-right' ></i></a>
+                <ul class="side-dropdown">
+                    <li><a href="#">Age</a></li>
+                    <li><a href="#">BMI</a></li>
+                    <li><a href="#">Pregnancy Month</a></li>
+                    <li><a href="#">OGTT 1h/2h</a></li>
+                    <li><a href="#">GDM/Non-GDM</a></li>
+                </ul>
+            </li>
+            <li><a href="#"><i class='bx bxs-chart icon' ></i> Charts</a></li>
+            <li><a href="#"><i class='bx bxs-widget icon' ></i> Widgets</a></li>
+            <li class="divider" data-text="table and forms">Table and forms</li>
+            <li><a href="#"><i class='bx bx-table icon' ></i> Tables</a></li>
+            <li>
+                <a href="#"><i class='bx bxs-notepad icon' ></i> Forms <i class='bx bx-chevron-right icon-right' ></i></a>
+                <ul class="side-dropdown">
+                    <li><a href="#">Basic</a></li>
+                    <li><a href="#">Select</a></li>
+                    <li><a href="#">Checkbox</a></li>
+                    <li><a href="#">Radio</a></li>
+                </ul>
+            </li>
         </ul>
-
-        <!-- Patient Details and OGTT Chart -->
-        <div class="patient-details" id="patient-details-container">
-            <!-- Patient 1 -->
-            <div class="patient" id="patient-1" style="display: none;">
-                <h2>Patient Details - Emily Johnson</h2>
-                <p><strong>Age:</strong> 28</p>
-                <p><strong>Weight:</strong> 60 kg</p>
-                <p><strong>Phone:</strong> +1 (555) 123-4567</p>
-                <p><strong>Email:</strong> emily@example.com</p>
-
-                <!-- OGTT Chart -->
-                <h3>OGTT (Oral Glucose Tolerance Test) Chart</h3>
-                <div style="width: 100%; height: 400px;">
-                    <canvas id="ogtt-chart-1"></canvas>
-                </div>
-
-                <!-- Predict Button -->
-                <button onclick="predictGDM(1)">Predict GDM</button>
-                <p id="prediction-result-1"></p>
+        <div class="ads">
+            <div class="wrapper">
+                <a href="#" class="btn-upgrade">Upgrade</a>
+                <p>Become a <span>PRO</span> member and enjoy <span>All Features</span></p>
             </div>
-
-            <!-- Patient 2 -->
-            <div class="patient" id="patient-2" style="display: none;">
-                <!-- ... (similar structure for other patients) ... -->
-            </div>
-
-            <!-- ... (similar structure for other patients) ... -->
         </div>
+    </section>
 
-        <!-- Footer -->
-        <!-- ... -->
-    </div>
+    <section id="content">
+        <!-- NAVBAR -->
+        <nav>
+            <i class='bx bx-menu toggle-sidebar' ></i>
+            <form action="#">
+                <div class="form-group">
+                    <input type="text" placeholder="Search...">
+                    <i class='bx bx-search icon' ></i>
+                </div>
+            </form>
+            <a href="#" class="nav-link">
+                <i class='bx bxs-bell icon' ></i>
+                <span class="badge">5</span>
+            </a>
+            <a href="#" class="nav-link">
+                <i class='bx bxs-message-square-dots icon' ></i>
+                <span class="badge">8</span>
+            </a>
+            <span class="divider"></span>
+            <div class="profile">
+                <img src="https://images.unsplash.com/photo-1517841905240-472988babdf9?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8cGVvcGxlfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="">
+                <ul class="profile-link">
+                    <li><a href="#"><i class='bx bxs-user-circle icon' ></i> Profile</a></li>
+                    <li><a href="#"><i class='bx bxs-cog' ></i> Settings</a></li>
+                    <li><a href="#"><i class='bx bxs-log-out-circle' ></i> Logout</a></li>
+                </ul>
+            </div>
+        </nav>
+        <!-- NAVBAR -->
 
-    <!-- JavaScript and Chart.js -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+        <!-- MAIN -->
+        <main>
+            <h1 class="title">Doctor Dashboard</h1>
+            <ul class="breadcrumbs">
+                <li><a href="#">Home</a></li>
+                <li class="divider">/</li>
+                <li><a href="#" class="active">Dashboard</a></li>
+            </ul>
+            <div class="patient-list">
+                <h2>Patients List</h2>
+                <div class="patient-box" onclick="navigateToPatientDashboard(1)">
+                    <img src="https://via.placeholder.com/150" alt="Patient 1">
+                    <p>Emily Johnson</p>
+                </div>
+                <div class="patient-box" onclick="navigateToPatientDashboard(2)">
+                    <img src="https://via.placeholder.com/150" alt="Patient 2">
+                    <p>Susan Williams</p>
+                </div>
+                <div class="patient-box" onclick="navigateToPatientDashboard(3)">
+                    <img src="https://via.placeholder.com/150" alt="Patient 3">
+                    <p>Michael Smith</p>
+                </div>
+                <div class="patient-box" onclick="navigateToPatientDashboard(4)">
+                    <img src="https://via.placeholder.com/150" alt="Patient 4">
+                    <p>John Doe</p>
+                </div>
+                <div class="patient-box" onclick="navigateToPatientDashboard(5)">
+                    <img src="https://via.placeholder.com/150" alt="Patient 5">
+                    <p>Jane Smith</p>
+                </div>
+            </div>
+            
+        </main>
+        <!-- MAIN -->
+        
+    </section>
+
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <script src="script.js"></script>
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            // Dummy data for OGTT values (replace with actual patient data)
-            const patientsData = [
-                { id: 1, name: "Emily Johnson", age: 28, weight: 60, phone: "+1 (555) 123-4567", email: "emily@example.com", ogttData: [ /* ... */ ] },
-                { id: 2, name: "Susan Williams", age: 31, weight: 65, phone: "+1 (555) 987-6543", email: "susan@example.com", ogttData: [ /* ... */ ] },
-                { id: 3, name: "Michael Smith", age: 29, weight: 70, phone: "+1 (555) 555-5555", email: "michael@example.com", ogttData: [ /* ... */ ] },
-                { id: 4, name: "John Doe", age: 32, weight: 75, phone: "+1 (555) 111-2222", email: "john@example.com", ogttData: [ /* ... */ ] },
-                { id: 5, name: "Jane Smith", age: 30, weight: 68, phone: "+1 (555) 222-3333", email: "jane@example.com", ogttData: [ /* ... */ ] }
-            ];
-
-            // ... (create OGTT charts for each patient and handle prediction) ...
-        });
-
-        function showPatientDetails(patientId) {
-            const patientContainers = document.querySelectorAll(".patient");
-            for (const container of patientContainers) {
-                container.style.display = "none";
-            }
-            const selectedContainer = document.getElementById(`patient-${patientId}`);
-            selectedContainer.style.display = "block";
-        }
-
-        function predictGDM(patientId) {
-            // Fetch patient data based on the ID
-            const selectedPatient = patientsData.find(patient => patient.id === patientId);
-
-            // Get the latest OGTT value for prediction
-            const ogttValues = selectedPatient.ogttData.map(item => item.value);
-            const latestValue = ogttValues[ogttValues.length - 1];
-
-            // Perform GDM prediction (replace with actual API call)
-            // Dummy function for illustration (replace with actual API call)
-            function predictGDMFromBackend(ogttValue) {
-                // Replace this with your actual backend API call to predict GDM
-                // For demonstration purposes, let's assume a simple threshold-based classification
-                const threshold = 140;
-                return ogttValue >= threshold ? "GDM" : "non-GDM";
-            }
-
-            const predictionResult = predictGDMFromBackend(latestValue);
-
-            // Display the prediction result
-            const predictionElement = document.getElementById(`prediction-result-${patientId}`);
-            if (predictionResult === "GDM") {
-                predictionElement.textContent = "Prediction: Gestational Diabetes Mellitus (GDM)";
-            } else if (predictionResult === "non-GDM") {
-                predictionElement.textContent = "Prediction: Non-Gestational Diabetes Mellitus (non-GDM)";
-            } else {
-                predictionElement.textContent = "Prediction: Not available";
-            }
-        }
-    </script>
 </body>
 </html>
